# auto-deal-hunter

./: .env.example  .gitignore  LICENSE  README.md  agent_mcp.py  build_pricer_data.py  build_vector_store.py  deal_agent_framework.py  deal_hunter.py  eval_pricers.py  log_utils.py  mcp_server.py  pricer_service.py  pyproject.toml  requirements.txt  train_pricer.py  util.py
agents/: agent.py  deals.py  ensemble_agent.py  frontier_agent.py  items.py  messaging_agent.py  scanner_agent.py  specialist_agent.py
